<resources>
    <string name="app_name">酷天气</string>

    <string name="app_common_error_msg">无法加载数据，请检查网络</string>
    <string name="app_common_button_text_i_know">我知道了</string>
    <string name="app_common_button_text_ok">确定</string>
    <string name="app_common_button_text_cancel">取消</string>

    <string name="app_common_progress_dialog_msg">正在加载……</string>

    <string name="weather_daily_forecast">每天预报</string>
    <string name="weather_hourly_forecast">每小时预报</string>
    <string name="weather_aqi">空气质量</string>
    <string name="weather_aqi_value">AQI指数</string>
    <string name="weather_pm">PM2.5指数</string>
    <string name="weather_suggestion">生活建议</string>

    <string name="weather_info_fail">获取天气信息失败</string>

    <string name="weather_comfort_label">舒适度: </string>
    <string name="weather_car_wash_label">洗车指数: </string>
    <string name="weather_sport_label">运动建议: </string>

    <string name="add_city">添加城市</string>
    <string name="manager_city">管理城市</string>

    <string name="weather_update_time">更新时间: %s</string>

    <string name="app_setting">设置</string>
    <string name="app_setting_auto_update">自动更新</string>
    <string name="app_setting_auto_update_interval">更新间隔</string>
    <string name="app_setting_show_notification">通知栏显示</string>

    <string name="app_location_error_title">定位失败</string>
    <string name="app_location_error_message">请手动选择城市</string>
    <string name="app_location_success_title">定位成功</string>
    <string name="app_location_success_message">是否选择当前城市: %s ?</string>

    <string name="app_permission_message">需要申请权限，请选择同意</string>
    <string name="app_permission_denied_result">拒绝授权可能导致App无法运行</string>

    <string-array name="app_setting_auto_update_items">
        <item>开</item>
        <item>关</item>
    </string-array>

    <string-array name="app_setting_auto_update_interval_items">
        <item>1小时</item>
        <item>2小时</item>
        <item>3小时</item>
        <item>4小时</item>
        <item>5小时</item>
        <item>6小时</item>
    </string-array>

    <string-array name="app_setting_show_notification_items">
        <item>开</item>
        <item>关</item>
    </string-array>
</resources>
