<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.lance.common.widget.TopBar
        android:id="@+id/tb_title_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:leftDrawable="@mipmap/ic_back"
        app:leftVisibility="true"
        app:titleText="@string/app_setting"
        app:titleTextColor="@android:color/white"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/color_929292"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_929292"/>

    <com.lance.common.widget.OptionView
        android:id="@+id/ov_auto_update"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:rightIcon="@mipmap/ic_set"
        app:text="@string/app_setting_auto_update"
        app:textColor="@android:color/black"
        app:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_929292"/>

    <com.lance.common.widget.OptionView
        android:id="@+id/ov_auto_update_interval"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:rightIcon="@mipmap/ic_set"
        app:text="@string/app_setting_auto_update_interval"
        app:textColor="@android:color/black"
        app:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_929292"/>

    <com.lance.common.widget.OptionView
        android:id="@+id/ov_show_notification"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:rightIcon="@mipmap/ic_set"
        app:text="@string/app_setting_show_notification"
        app:textColor="@android:color/black"
        app:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_929292"/>
</LinearLayout>
